2003-11-10  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_configure): Distribute and define mkinstalldirs
	only if it is already present in the package.
	(scan_autoconf_files): Do not require mkinstalldirs.
	(require_build_directory): Use $(mkdir_p), not $(mkinstalldirs).
	* lib/am/data.am, lib/am/distdir.am, lib/am/install.am,
	lib/am/java.am, lib/am/libs.am, lib/am/lisp.am, lib/am/mans.am,
	lib/am/progs.am, lib/am/python.am, lib/am/scripts.am,
	lib/am/texinfos.am: Use $(mkdir_p) instead of $(mkinstalldirs).
	* m4/mkdirp.m4: New file.
	* m4/Makefile.am (dist_m4data_DATA): Add mkdirp.m4.
	* m4/init.m4 (AM_INIT_AUTOMAKE): Call AM_PROG_MKDIR_P.
	* tests/Makefile.am (TESTS): Remove insh.test.
	* tests/insh.test: Delete.
	* tests/defs.in, tests/instsh.test: Do not install mkinstalldirs.
	* tests/auxdir.test: Install mkinstalldirs.
	* tests/distdir.test, tests/instman.test, tests/pr2.test: Use
	$(mkdir_p), not $(mkinstalldirs).
	* tests/empty.test: Run configure, do not substitute things by hand.
	* doc/automake.texi (Optional) <AC_CONFIG_FILES>: Take install-sh
	as an example, not mkinstalldirs.
	(Auxiliary Programs) <mkinstalldirs>: Update.

	* tests/defs.in: Handle required=bzip2.

	* tests/defs.in: Export SHELL.
	* tests/cond11.test: Missing quotes.
	* tests/nogzip2.test: Require bzip2.

2003-11-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* NEWS: Add news entries from 1.6.x and 1.7.x.

	* automake.texi (Optional) <AC_SUBST>: Grammar fixes.

	* automake.in (check_gnu_standards): Install COPYING only if
	none of COPYING, COPYING.LIB, or COPYING.LESSER exist.  Do not
	overwrite the license otherwise.
	* tests/Makefile.am (TESTS): Add license.test.
	* tests/license.test: New file.

	* lib/mkinstalldirs: Mention automake-patches@gnu.org and
	bug-automake@gnu.org.
	* lib/compile, lib/depcomp, lib/elisp-comp, lib/mdate-sh:
	Likewise.  Also add support for --help and --version.
	* lib/py-compile, lib/ylwrap: Likewise, and reindent.
