@@ -1,5 +1,8 @@
 2003-11-10  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* tests/spy.test: New file.
+	* tests/Makefile.am (TESTS): Add spy.test.
+
 	* automake.in (handle_configure): Distribute and define mkinstalldirs
 	only if it is already present in the package.
 	(scan_autoconf_files): Do not require mkinstalldirs.
